Add table contents for Sniper/Sub/Buccaneer HTML files

--- a/buccaneer.html
+++ b/buccaneer.html
@@ -3,18 +3,18 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Dart Monkey Stats</title>
+    <title>Monkey Buccaneer Stats</title>
 </head>
 <body>
     <header>
         <table>
             <thead>
-                <th>Dart Monkey (base)</th>
+                <th>Monkey Buccaneer(base)</th>
             </thead>
             <tbody>
                 <tr>
                     <th>Cost</th>
-                    <td>$200</td>
+                    <td>$400</td>
                 </tr>
                 <tr>
                     <th>Damage</th>
@@ -22,19 +22,19 @@
                 </tr>
                 <tr>
                     <th>Pierce</th>
-                    <td>2</td>
+                    <td>4</td>
                 </tr>
                 <tr>
                     <th>Attack cooldown</th>
-                    <td>0.95s</td>
+                    <td>1s</td>
                 </tr>
                 <tr>
                     <th>Range</th>
-                    <td>Small (32 units)</td>
+                    <td>Large (60 units)</td>
                 </tr>
                 <tr>
                     <th>Footprint</th>
-                    <td>Small</td>
+                    <td>Slightly Large</td>
                 </tr>
                 <tr>
                     <th>Can pop</th>
@@ -46,7 +46,7 @@
                 </tr>
                 <tr>
                     <th>Other perks</th>
-                    <td>None</td>
+                    <td>Can fire simultaneously from cannons on both sides of the ship</td>
                 </tr>
             </tbody>
         </table>
@@ -59,21 +59,21 @@
             <thead>
                 <tr>
                     <th>Top Upgrade Path</th>
-                    <th>Tier 1</th>
-                    <th>Tier 2</th>
-                    <th>Tier 3</th>
-                    <th>Tier 4</th>
-                    <th>Tier 5</th>
+                    <th>Faster Shooting</th>
+                    <th>Double Shot</th>
+                    <th>Destroyer</th>
+                    <th>Aircraft Carrier</th>
+                    <th>Carrier Flagship</th>
                 </tr>
             </thead>
             <tbody>
                 <tr>
                     <th>Cost</th>
-                    <td>100</td>
-                    <td>200</td>
-                    <td>500</td>
-                    <td>2,000</td>
-                    <td>20,000</td>
+                    <td>275</td>
+                    <td>425</td>
+                    <td>3,050</td>
+                    <td>8,000</td>
+                    <td>24,500</td>
                 </tr>
                 <tr>
                     <th>Changes</th>
@@ -92,21 +92,21 @@
             <thead>
                 <tr>
                     <th>Middle Upgrade Path</th>
-                    <th>Tier 1</th>
-                    <th>Tier 2</th>
-                    <th>Tier 3</th>
-                    <th>Tier 4</th>
-                    <th>Tier 5</th>
+                    <th>Grape Shot</th>
+                    <th>Hot Shot</th>
+                    <th>Cannon Ship</th>
+                    <th>Monkey Pirates</th>
+                    <th>Pirate Lord</th>
                 </tr>
             </thead>
             <tbody>
                 <tr>
                     <th>Cost</th>
-                    <td>100</td>
-                    <td>200</td>
+                    <td>550</td>
                     <td>500</td>
-                    <td>2,000</td>
-                    <td>20,000</td>
+                    <td>900</td>
+                    <td>3,900</td>
+                    <td>27,000</td>
                 </tr>
                 <tr>
                     <th>Changes</th>
@@ -125,21 +125,21 @@
             <thead>
                 <tr>
                     <th>Bottom Upgrade Path</th>
-                    <th>Tier 1</th>
-                    <th>Tier 2</th>
-                    <th>Tier 3</th>
-                    <th>Tier 4</th>
-                    <th>Tier 5</th>
+                    <th>Long Range</th>
+                    <th>Crow's Nest</th>
+                    <th>Merchantman</th>
+                    <th>Favored Trades</th>
+                    <th>Trade Empire</th>
                 </tr>
             </thead>
             <tbody>
                 <tr>
                     <th>Cost</th>
-                    <td>100</td>
                     <td>200</td>
-                    <td>500</td>
-                    <td>2,000</td>
-                    <td>20,000</td>
+                    <td>350</td>
+                    <td>2,400</td>
+                    <td>5,500</td>
+                    <td>23,000</td>
                 </tr>
                 <tr>
                     <th>Changes</th>
