--- a/sniper.html
+++ b/sniper.html
@@ -3,34 +3,34 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Dart Monkey Stats</title>
+    <title>Sniper Monkey Stats</title>
 </head>
 <body>
     <header>
         <table>
             <thead>
-                <th>Dart Monkey (base)</th>
+                <th>Sniper Monkey (base)</th>
             </thead>
             <tbody>
                 <tr>
                     <th>Cost</th>
-                    <td>$200</td>
+                    <td>$350</td>
                 </tr>
                 <tr>
                     <th>Damage</th>
-                    <td>1</td>
-                </tr>
-                <tr>
-                    <th>Pierce</th>
                     <td>2</td>
                 </tr>
                 <tr>
+                    <th>Pierce</th>
+                    <td>1</td>
+                </tr>
+                <tr>
                     <th>Attack cooldown</th>
-                    <td>0.95s</td>
+                    <td>1.59s</td>
                 </tr>
                 <tr>
                     <th>Range</th>
-                    <td>Small (32 units)</td>
+                    <td>Infinite</td>
                 </tr>
                 <tr>
                     <th>Footprint</th>
@@ -59,21 +59,21 @@
             <thead>
                 <tr>
                     <th>Top Upgrade Path</th>
-                    <th>Tier 1</th>
-                    <th>Tier 2</th>
-                    <th>Tier 3</th>
-                    <th>Tier 4</th>
-                    <th>Tier 5</th>
+                    <th>Full Metal Jacket</th>
+                    <th>Large Calibre</th>
+                    <th>Deadly Precision</th>
+                    <th>Main MOAB</th>
+                    <th>Cripple MOAB</th>
                 </tr>
             </thead>
             <tbody>
                 <tr>
                     <th>Cost</th>
-                    <td>100</td>
-                    <td>200</td>
-                    <td>500</td>
-                    <td>2,000</td>
-                    <td>20,000</td>
+                    <td>350</td>
+                    <td>1,300</td>
+                    <td>2,500</td>
+                    <td>6,000</td>
+                    <td>32,000</td>
                 </tr>
                 <tr>
                     <th>Changes</th>
@@ -92,21 +92,21 @@
             <thead>
                 <tr>
                     <th>Middle Upgrade Path</th>
-                    <th>Tier 1</th>
-                    <th>Tier 2</th>
-                    <th>Tier 3</th>
-                    <th>Tier 4</th>
-                    <th>Tier 5</th>
+                    <th>Night Vision Goggles</th>
+                    <th>Shrapnel Shot</th>
+                    <th>Bouncing Bullet</th>
+                    <th>Supply Drop</th>
+                    <th>Elite Sniper</th>
                 </tr>
             </thead>
             <tbody>
                 <tr>
                     <th>Cost</th>
-                    <td>100</td>
-                    <td>200</td>
-                    <td>500</td>
-                    <td>2,000</td>
-                    <td>20,000</td>
+                    <td>250</td>
+                    <td>450</td>
+                    <td>2,100</td>
+                    <td>7,600</td>
+                    <td>12,000</td>
                 </tr>
                 <tr>
                     <th>Changes</th>
@@ -125,21 +125,21 @@
             <thead>
                 <tr>
                     <th>Bottom Upgrade Path</th>
-                    <th>Tier 1</th>
-                    <th>Tier 2</th>
-                    <th>Tier 3</th>
-                    <th>Tier 4</th>
-                    <th>Tier 5</th>
+                    <th>Fast Firing</th>
+                    <th>Even Faster Firing</th>
+                    <th>Semi-Automatic</th>
+                    <th>Full Auto Rifle</th>
+                    <th>Elite Defender</th>
                 </tr>
             </thead>
             <tbody>
                 <tr>
                     <th>Cost</th>
-                    <td>100</td>
-                    <td>200</td>
-                    <td>500</td>
-                    <td>2,000</td>
-                    <td>20,000</td>
+                    <td>450</td>
+                    <td>450</td>
+                    <td>2,700</td>
+                    <td>4,100</td>
+                    <td>14,900</td>
                 </tr>
                 <tr>
                     <th>Changes</th>
