--- a/sub.html
+++ b/sub.html
@@ -3,18 +3,18 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Dart Monkey Stats</title>
+    <title>Monkey Sub Stats</title>
 </head>
 <body>
     <header>
         <table>
             <thead>
-                <th>Dart Monkey (base)</th>
+                <th>Monkey Sub (base)</th>
             </thead>
             <tbody>
                 <tr>
                     <th>Cost</th>
-                    <td>$200</td>
+                    <td>$325</td>
                 </tr>
                 <tr>
                     <th>Damage</th>
@@ -26,15 +26,15 @@
                 </tr>
                 <tr>
                     <th>Attack cooldown</th>
-                    <td>0.95s</td>
+                    <td>0.75s</td>
                 </tr>
                 <tr>
                     <th>Range</th>
-                    <td>Small (32 units)</td>
+                    <td>Medium (42 units)</td>
                 </tr>
                 <tr>
                     <th>Footprint</th>
-                    <td>Small</td>
+                    <td>Medium</td>
                 </tr>
                 <tr>
                     <th>Can pop</th>
@@ -46,7 +46,7 @@
                 </tr>
                 <tr>
                     <th>Other perks</th>
-                    <td>None</td>
+                    <td>Homing dart projectiles</td>
                 </tr>
             </tbody>
         </table>
@@ -59,21 +59,21 @@
             <thead>
                 <tr>
                     <th>Top Upgrade Path</th>
-                    <th>Tier 1</th>
-                    <th>Tier 2</th>
-                    <th>Tier 3</th>
-                    <th>Tier 4</th>
-                    <th>Tier 5</th>
+                    <th>Longer Range</th>
+                    <th>Advanced Intel</th>
+                    <th>Submerge and Support</th>
+                    <th>Bloontonium Reactor</th>
+                    <th>Energizer</th>
                 </tr>
             </thead>
             <tbody>
                 <tr>
                     <th>Cost</th>
-                    <td>100</td>
-                    <td>200</td>
+                    <td>130</td>
                     <td>500</td>
-                    <td>2,000</td>
-                    <td>20,000</td>
+                    <td>700</td>
+                    <td>2,300</td>
+                    <td>28,000</td>
                 </tr>
                 <tr>
                     <th>Changes</th>
@@ -92,21 +92,21 @@
             <thead>
                 <tr>
                     <th>Middle Upgrade Path</th>
-                    <th>Tier 1</th>
-                    <th>Tier 2</th>
-                    <th>Tier 3</th>
-                    <th>Tier 4</th>
-                    <th>Tier 5</th>
+                    <th>Barbed Darts</th>
+                    <th>Heat-tipped Darts</th>
+                    <th>Ballistic Missile</th>
+                    <th>First Strike Capability</th>
+                    <th>Pre-emptive Strike</th>
                 </tr>
             </thead>
             <tbody>
                 <tr>
                     <th>Cost</th>
-                    <td>100</td>
-                    <td>200</td>
-                    <td>500</td>
-                    <td>2,000</td>
-                    <td>20,000</td>
+                    <td>450</td>
+                    <td>300</td>
+                    <td>1,350</td>
+                    <td>13,000</td>
+                    <td>29,000</td>
                 </tr>
                 <tr>
                     <th>Changes</th>
@@ -125,21 +125,21 @@
             <thead>
                 <tr>
                     <th>Bottom Upgrade Path</th>
-                    <th>Tier 1</th>
-                    <th>Tier 2</th>
-                    <th>Tier 3</th>
-                    <th>Tier 4</th>
-                    <th>Tier 5</th>
+                    <th>Twin Guns</th>
+                    <th>Airburst Darts</th>
+                    <th>Triple Guns</th>
+                    <th>Armor Piercing Darts</th>
+                    <th>Sub Commander</th>
                 </tr>
             </thead>
             <tbody>
                 <tr>
                     <th>Cost</th>
-                    <td>100</td>
-                    <td>200</td>
-                    <td>500</td>
-                    <td>2,000</td>
-                    <td>20,000</td>
+                    <td>450</td>
+                    <td>1,000</td>
+                    <td>1,100</td>
+                    <td>2,500</td>
+                    <td>25,000</td>
                 </tr>
                 <tr>
                     <th>Changes</th>
