Add table contents for Ace/Heli/Mortar HTML files

--- a/ace.html
+++ b/ace.html
@@ -3,18 +3,18 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Dart Monkey Stats</title>
+    <title>Monkey Ace Stats</title>
 </head>
 <body>
     <header>
         <table>
             <thead>
-                <th>Dart Monkey (base)</th>
+                <th>Monkey Ace (base)</th>
             </thead>
             <tbody>
                 <tr>
                     <th>Cost</th>
-                    <td>$200</td>
+                    <td>$800</td>
                 </tr>
                 <tr>
                     <th>Damage</th>
@@ -22,19 +22,19 @@
                 </tr>
                 <tr>
                     <th>Pierce</th>
-                    <td>2</td>
+                    <td>5</td>
                 </tr>
                 <tr>
                     <th>Attack cooldown</th>
-                    <td>0.95s</td>
+                    <td>1.68s</td>
                 </tr>
                 <tr>
                     <th>Range</th>
-                    <td>Small (32 units)</td>
+                    <td>Infinite</td>
                 </tr>
                 <tr>
                     <th>Footprint</th>
-                    <td>Small</td>
+                    <td>Very Large</td>
                 </tr>
                 <tr>
                     <th>Can pop</th>
@@ -46,7 +46,7 @@
                 </tr>
                 <tr>
                     <th>Other perks</th>
-                    <td>None</td>
+                    <td>Ignores map obstacles</td>
                 </tr>
             </tbody>
         </table>
@@ -59,21 +59,21 @@
             <thead>
                 <tr>
                     <th>Top Upgrade Path</th>
-                    <th>Tier 1</th>
-                    <th>Tier 2</th>
-                    <th>Tier 3</th>
-                    <th>Tier 4</th>
-                    <th>Tier 5</th>
+                    <th>Rapid Fire</th>
+                    <th>Lots More Darts</th>
+                    <th>Fighter Plane</th>
+                    <th>Operation: Dart Storm</th>
+                    <th>Sky Shredder</th>
                 </tr>
             </thead>
             <tbody>
                 <tr>
                     <th>Cost</th>
-                    <td>100</td>
-                    <td>200</td>
-                    <td>500</td>
-                    <td>2,000</td>
-                    <td>20,000</td>
+                    <td>450</td>
+                    <td>550</td>
+                    <td>1,000</td>
+                    <td>3,300</td>
+                    <td>42,500</td>
                 </tr>
                 <tr>
                     <th>Changes</th>
@@ -92,21 +92,21 @@
             <thead>
                 <tr>
                     <th>Middle Upgrade Path</th>
-                    <th>Tier 1</th>
-                    <th>Tier 2</th>
-                    <th>Tier 3</th>
-                    <th>Tier 4</th>
-                    <th>Tier 5</th>
+                    <th>Exploding Pineapple</th>
+                    <th>Spy Plane</th>
+                    <th>Bomber Ace</th>
+                    <th>Ground Zero</th>
+                    <th>Tsar Bomba</th>
                 </tr>
             </thead>
             <tbody>
                 <tr>
                     <th>Cost</th>
-                    <td>100</td>
                     <td>200</td>
-                    <td>500</td>
-                    <td>2,000</td>
-                    <td>20,000</td>
+                    <td>350</td>
+                    <td>900</td>
+                    <td>18,000</td>
+                    <td>26,000</td>
                 </tr>
                 <tr>
                     <th>Changes</th>
@@ -125,21 +125,21 @@
             <thead>
                 <tr>
                     <th>Bottom Upgrade Path</th>
-                    <th>Tier 1</th>
-                    <th>Tier 2</th>
-                    <th>Tier 3</th>
-                    <th>Tier 4</th>
-                    <th>Tier 5</th>
+                    <th>Sharper Darts</th>
+                    <th>Centered Path</th>
+                    <th>Neva-Miss Targeting</th>
+                    <th>Spectre</th>
+                    <th>Flying Fortress</th>
                 </tr>
             </thead>
             <tbody>
                 <tr>
                     <th>Cost</th>
-                    <td>100</td>
-                    <td>200</td>
                     <td>500</td>
-                    <td>2,000</td>
-                    <td>20,000</td>
+                    <td>550</td>
+                    <td>2,550</td>
+                    <td>23,400</td>
+                    <td>85,000</td>
                 </tr>
                 <tr>
                     <th>Changes</th>
