--- a/heli.html
+++ b/heli.html
@@ -3,38 +3,42 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Dart Monkey Stats</title>
+    <title>Heli Pilot Stats</title>
 </head>
 <body>
     <header>
         <table>
             <thead>
-                <th>Dart Monkey (base)</th>
+                <th>Heli Pilot (base)</th>
             </thead>
             <tbody>
                 <tr>
                     <th>Cost</th>
-                    <td>$200</td>
+                    <td>$1,500</td>
                 </tr>
                 <tr>
                     <th>Damage</th>
-                    <td>1</td>
+                    <td>2x1</td>
                 </tr>
                 <tr>
                     <th>Pierce</th>
-                    <td>2</td>
+                    <td>3</td>
                 </tr>
                 <tr>
                     <th>Attack cooldown</th>
-                    <td>0.95s</td>
+                    <td>0.57s</td>
                 </tr>
                 <tr>
-                    <th>Range</th>
-                    <td>Small (32 units)</td>
+                    <th>Flight Range</th>
+                    <td>Infinite</td>
+                </tr>
+                <tr>
+                    <th>Heli Range</th>
+                    <td>Medium (42 units)</td>
                 </tr>
                 <tr>
                     <th>Footprint</th>
-                    <td>Small</td>
+                    <td>Very Large</td>
                 </tr>
                 <tr>
                     <th>Can pop</th>
@@ -46,7 +50,7 @@
                 </tr>
                 <tr>
                     <th>Other perks</th>
-                    <td>None</td>
+                    <td>Ignores map obstacles; dual dart attack</td>
                 </tr>
             </tbody>
         </table>
@@ -59,21 +63,21 @@
             <thead>
                 <tr>
                     <th>Top Upgrade Path</th>
-                    <th>Tier 1</th>
-                    <th>Tier 2</th>
-                    <th>Tier 3</th>
-                    <th>Tier 4</th>
-                    <th>Tier 5</th>
+                    <th>Quad Darts</th>
+                    <th>Pursuit</th>
+                    <th>Razor Rotors</th>
+                    <th>Apache Dartship</th>
+                    <th>Apache Prime</th>
                 </tr>
             </thead>
             <tbody>
                 <tr>
                     <th>Cost</th>
-                    <td>100</td>
-                    <td>200</td>
+                    <td>800</td>
                     <td>500</td>
-                    <td>2,000</td>
-                    <td>20,000</td>
+                    <td>1,850</td>
+                    <td>19,600</td>
+                    <td>45,000</td>
                 </tr>
                 <tr>
                     <th>Changes</th>
@@ -92,21 +96,21 @@
             <thead>
                 <tr>
                     <th>Middle Upgrade Path</th>
-                    <th>Tier 1</th>
-                    <th>Tier 2</th>
-                    <th>Tier 3</th>
-                    <th>Tier 4</th>
-                    <th>Tier 5</th>
+                    <th>Bigger Jets</th>
+                    <th>IFR</th>
+                    <th>Downdraft</th>
+                    <th>Support Chinook</th>
+                    <th>Special Poperations</th>
                 </tr>
             </thead>
             <tbody>
                 <tr>
                     <th>Cost</th>
-                    <td>100</td>
-                    <td>200</td>
-                    <td>500</td>
-                    <td>2,000</td>
-                    <td>20,000</td>
+                    <td>300</td>
+                    <td>600</td>
+                    <td>3,500</td>
+                    <td>9,500</td>
+                    <td>30,000</td>
                 </tr>
                 <tr>
                     <th>Changes</th>
@@ -125,21 +129,21 @@
             <thead>
                 <tr>
                     <th>Bottom Upgrade Path</th>
-                    <th>Tier 1</th>
-                    <th>Tier 2</th>
-                    <th>Tier 3</th>
-                    <th>Tier 4</th>
-                    <th>Tier 5</th>
+                    <th>Faster Darts</th>
+                    <th>Faster Firing</th>
+                    <th>MOAB Shove</th>
+                    <th>Comanche Defense</th>
+                    <th>Comanche Commander</th>
                 </tr>
             </thead>
             <tbody>
                 <tr>
                     <th>Cost</th>
-                    <td>100</td>
-                    <td>200</td>
-                    <td>500</td>
-                    <td>2,000</td>
-                    <td>20,000</td>
+                    <td>250</td>
+                    <td>350</td>
+                    <td>3,400</td>
+                    <td>8,500</td>
+                    <td>35,000</td>
                 </tr>
                 <tr>
                     <th>Changes</th>
