--- a/wizard.html
+++ b/wizard.html
@@ -3,18 +3,18 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Dart Monkey Stats</title>
+    <title>Wizard Monkey Stats</title>
 </head>
 <body>
     <header>
         <table>
             <thead>
-                <th>Dart Monkey (base)</th>
+                <th>Wizard Monkey (base)</th>
             </thead>
             <tbody>
                 <tr>
                     <th>Cost</th>
-                    <td>$200</td>
+                    <td>$250</td>
                 </tr>
                 <tr>
                     <th>Damage</th>
@@ -22,27 +22,27 @@
                 </tr>
                 <tr>
                     <th>Pierce</th>
-                    <td>2</td>
+                    <td>3</td>
                 </tr>
                 <tr>
                     <th>Attack cooldown</th>
-                    <td>0.95s</td>
+                    <td>1.1s</td>
                 </tr>
                 <tr>
                     <th>Range</th>
-                    <td>Small (32 units)</td>
+                    <td>Medium (40 units)</td>
                 </tr>
                 <tr>
                     <th>Footprint</th>
-                    <td>Small</td>
+                    <td>Medium</td>
                 </tr>
                 <tr>
                     <th>Can pop</th>
-                    <td>Purple, White, Black</td>
+                    <td>White, Black, Frozen</td>
                 </tr>
                 <tr>
                     <th>Cannot pop</th>
-                    <td>Camo, Lead</td>
+                    <td>Camo, Lead, Purple</td>
                 </tr>
                 <tr>
                     <th>Other perks</th>
@@ -59,21 +59,21 @@
             <thead>
                 <tr>
                     <th>Top Upgrade Path</th>
-                    <th>Tier 1</th>
-                    <th>Tier 2</th>
-                    <th>Tier 3</th>
-                    <th>Tier 4</th>
-                    <th>Tier 5</th>
+                    <th>Guided Magic</th>
+                    <th>Arcane Blast</th>
+                    <th>Arcane Mastery</th>
+                    <th>Arcane Spikes</th>
+                    <th>Archmage</th>
                 </tr>
             </thead>
             <tbody>
                 <tr>
                     <th>Cost</th>
-                    <td>100</td>
-                    <td>200</td>
-                    <td>500</td>
-                    <td>2,000</td>
-                    <td>20,000</td>
+                    <td>175</td>
+                    <td>450</td>
+                    <td>1,450</td>
+                    <td>10,000</td>
+                    <td>32,000</td>
                 </tr>
                 <tr>
                     <th>Changes</th>
@@ -92,21 +92,21 @@
             <thead>
                 <tr>
                     <th>Middle Upgrade Path</th>
-                    <th>Tier 1</th>
-                    <th>Tier 2</th>
-                    <th>Tier 3</th>
-                    <th>Tier 4</th>
-                    <th>Tier 5</th>
+                    <th>Fireball</th>
+                    <th>Wall of Fire</th>
+                    <th>Dragon's Breath</th>
+                    <th>Summon Phoenix</th>
+                    <th>Wizard Lord Phoenix</th>
                 </tr>
             </thead>
             <tbody>
                 <tr>
                     <th>Cost</th>
-                    <td>100</td>
-                    <td>200</td>
-                    <td>500</td>
-                    <td>2,000</td>
-                    <td>20,000</td>
+                    <td>300</td>
+                    <td>800</td>
+                    <td>3,300</td>
+                    <td>6,000</td>
+                    <td>50,000</td>
                 </tr>
                 <tr>
                     <th>Changes</th>
@@ -125,21 +125,21 @@
             <thead>
                 <tr>
                     <th>Bottom Upgrade Path</th>
-                    <th>Tier 1</th>
-                    <th>Tier 2</th>
-                    <th>Tier 3</th>
-                    <th>Tier 4</th>
-                    <th>Tier 5</th>
+                    <th>Intense Magic</th>
+                    <th>Monkey Sense</th>
+                    <th>Shimmer</th>
+                    <th>Necromancer: Unpopped Army</th>
+                    <th>Prince of Darkness</th>
                 </tr>
             </thead>
             <tbody>
                 <tr>
                     <th>Cost</th>
-                    <td>100</td>
-                    <td>200</td>
-                    <td>500</td>
-                    <td>2,000</td>
-                    <td>20,000</td>
+                    <td>300</td>
+                    <td>300</td>
+                    <td>1,500</td>
+                    <td>2,800</td>
+                    <td>26,500</td>
                 </tr>
                 <tr>
                     <th>Changes</th>
